--- a/VietUcflowergarden.css
+++ b/VietUcflowergarden.css
@@ -111,7 +111,7 @@
 .btn {
     margin-left:22px;
     color: #6e6e6e;
-    width: 40px
+    width: 40px;
     padding: 13px 10px;
     cursor: pointer;
     border-radius: 100px;
