--- a/DeVivre.css
+++ b/DeVivre.css
@@ -341,5 +341,5 @@ h4 {
     border-radius: 100px;
     box-shadow: 0 0 10px rgba(185, 185, 185, 0.705);
     display: inline-block; /* Đảm bảo logo là inline-block để không bị cắt */
-    margin: 10px 0; /* Thêm khoảng cách trên và dưới cho logo */
+    margin: 10px 50px; /* Thêm khoảng cách trên và dưới cho logo */
 }
