--- a/DeVivre.css
+++ b/DeVivre.css
@@ -111,6 +111,7 @@ body {
 
 #actions {
     display: flex;
+    margin-right: -100px;
 }
 
 .input {
@@ -119,8 +120,8 @@ body {
     border-radius: 100px;
     border: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    padding: 5px 10px;
-    width: 62px;
+    padding: 16px 22px;
+    width: 90px;
     transition: width 0.3s ease;
     margin-right: 22px;
 }
