--- a/đồ ăn mđ.css
+++ b/đồ ăn mđ.css
@@ -18,6 +18,7 @@
     justify-content: space-between;
     align-items: center;
     color: #ffffff;
+    border-bottom: 0.1px solid rgb(239, 237, 237);
 }
 
 .logo {
@@ -68,7 +69,9 @@
     display: block;
 }
 
-
+#actions {
+    display: flex;
+}
 
 .input {
     color: #6e6e6e;
@@ -76,9 +79,10 @@
     border-radius: 100px;
     border: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    padding: 5px 10px;
-    width: 68px;
+    padding: 16px 22px;
+    width: 90px;
     transition: width 0.3s ease;
+
 }
 
 .input::placeholder {
@@ -86,7 +90,7 @@
 }
 
 .btn {
-    margin-left: 22px;
+    margin-left: 0;
     color: #6e6e6e;
     width: 80px;
     padding: 13px 10px;
@@ -95,13 +99,13 @@
     border: none;
     background: rgba(255, 255, 255, 0.466);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    top: 0;
+    margin-top: 20px;
     left: 0;
 }
 .btn1 {
     margin-left: 22px;
     color: #6e6e6e;
-    width: 40px;
+    width: 35px;
     padding: 13px 10px;
     cursor: pointer;
     border-radius: 100px;
@@ -167,7 +171,8 @@ h3::after {
     text-align: center;
     display: block;
     height: 0.1px;
-    width: 100%;
+    margin-left: 26%;
+    width: 580px;
     position: absolute;
 }
 
@@ -191,7 +196,7 @@ h3::after {
 }
 
 .Quan h2 {
-    font-family: script;
+    font-family: cursive;
 }
 
 .Quan p {
