--- a/TheDe.css
+++ b/TheDe.css
@@ -111,6 +111,7 @@ body {
 
 #actions {
     display: flex;
+    margin-right: -100px;
 }
 
 .input {
@@ -119,8 +120,8 @@ body {
     border-radius: 100px;
     border: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    padding: 5px 10px;
-    width: 62px;
+    padding: 16px 22px;
+    width: 90px;
     transition: width 0.3s ease;
     margin-right: 22px;
 }
@@ -134,7 +135,7 @@ body {
     transition: 1s;
 }
 
-.btn {
+.btn1 {
     margin-right: 80px;
     color: #6e6e6e;
     width: 40px;
@@ -168,16 +169,14 @@ body {
 
 .suggestion-item {
     padding: 10px;
-    cursor: pointer;
-}
-
+    cursor: poin
 .suggestion-item:hover {
     background: #f0f0f0;
 }
 #banner {
     width: 100%;
     height: 550px;
-    background-image: linear-gradient(45deg, rgba(25, 26, 25, 0.7) 80%,rgba(57, 56, 56, 0.9)), url('BackgroundTheDe.png');
+    background-image:linear-gradient(45deg, rgba(25, 26, 25, 0.7) 80%,rgba(57, 56, 56, 0.9)),  url('BackgroundTheDe.png');
     background-size: cover;
     position: relative;
     display: flex;
@@ -341,5 +340,5 @@ h4 {
     border-radius: 100px;
     box-shadow: 0 0 10px rgba(185, 185, 185, 0.705);
     display: inline-block; /* Đảm bảo logo là inline-block để không bị cắt */
-    margin: 10px 0; /* Thêm khoảng cách trên và dưới cho logo */
+    margin: 10px 50px; /* Thêm khoảng cách trên và dưới cho logo */
 }
