--- a/ViewKT.css
+++ b/ViewKT.css
@@ -82,6 +82,7 @@
     padding: 16px 22px;
     width: 90px;
     transition: width 0.3s ease;
+
 }
 
 .input::placeholder {
@@ -89,7 +90,7 @@
 }
 
 .btn {
-    
+    margin-left: 0;
     color: #6e6e6e;
     width: 80px;
     padding: 13px 10px;
@@ -162,16 +163,7 @@ h3 {
     position: relative;
     text-align: center;
 }
-h3::before{
-    background-color: rgb(239, 237, 237);
-    bottom: 75px;
-    content: "";
-    display: block;
-    height: 0.1px;
-    width: 100%;
-    position: absolute;
-    left: 0;
-}
+
 h3::after {
     background-color: rgb(239, 237, 237);
     bottom: -100px;
@@ -179,8 +171,8 @@ h3::after {
     text-align: center;
     display: block;
     height: 0.1px;
-    width: 50%;
-    margin-left: 25%;
+    margin-left: 26%;
+    width: 580px;
     position: absolute;
 }
 
@@ -204,7 +196,7 @@ h3::after {
 }
 
 .Quan h2 {
-    font-family: script;
+    font-family: cursive;
 }
 
 .Quan p {
@@ -222,12 +214,7 @@ h3::after {
     color: gray;
     text-decoration: none;
 }
-.Quan video{
-    height: 420px;
-    width: 580px;
-    border-radius: 30px 30px 30px 30px;
-    object-fit: none;
-}
+
 .Quan img {
     height: 420px;
     max-width: 580px;
