--- a/Eva.css
+++ b/Eva.css
@@ -178,7 +178,7 @@ body {
 #banner {
     width: 100%;
     height: 550px;
-    background-image:linear-gradient(45deg, rgba(25, 26, 25, 0.7) 80%,rgba(57, 56, 56, 0.9)),  url('BackgroundEva.jpg');
+    background-image:linear-gradient(45deg, rgba(25, 26, 25, 0.7) 80%,rgba(57, 56, 56, 0.9)),  url('BackgroundEva.png');
     background-size: cover;
     position: relative;
     display: flex;
