--- a/View.css
+++ b/View.css
@@ -217,7 +217,7 @@ h3::after {
 
 .Quan img {
     height: 420px;
-    max-width: 580px;
+    width: 580px;
     border-radius: 30px 30px 30px 30px;
 }
 #footer {
