--- a/drink.css
+++ b/drink.css
@@ -113,65 +113,7 @@
     background: rgba(255, 255, 255, 0.466);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     top: 0;
-    left: 0;
-}
-.btn:hover, .btn1:hover {
-    background: rgb(63, 63, 63);
-    transition: 1s;
-}
-#actions {
-    position: relative;
-    display: flex;
-}
-
-#suggestions {
-    color: gray;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    border: 1px solid #ddd;
-    z-index: 1000;
-    display: none;
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-.suggestion-item {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.suggestion-item:hover {
-    background: #f0f0f0;
-}
-#banner {
-    max-width: 100%;
-    height: auto;
-    margin-top: 6px;
-    display: flex;
-    padding: 0px 133px;
-    position: relative;
-}
-
-h3 {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    padding-top: 50px;
-    font-size: 30px;
-    position: relative;
-    text-align: center;
-}
-
-h3::after {
-    background-color: rgb(239, 237, 237);
-    bottom: -100px;
-    content: "";
-    text-align: center;
-    display: block;
-    height: 0.1px;
-    margin-left: 26%;
+    28%;
     width: 580px;
     position: absolute;
 }
