--- a/View.css
+++ b/View.css
@@ -215,6 +215,11 @@ h3::after {
     text-decoration: none;
 }
 
+.Quan video {
+    height: 420px;
+    width: 580px;
+    border-radius: 30px 30px 30px 30px;
+}
 .Quan img {
     height: 420px;
     width: 580px;
