--- a/ViewKT.css
+++ b/ViewKT.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poetsen+One&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -171,7 +172,7 @@ h3::after {
     text-align: center;
     display: block;
     height: 0.1px;
-    margin-left: 28%;
+    margin-left: 29%;
     width: 580px;
     position: absolute;
 }
@@ -196,7 +197,7 @@ h3::after {
 }
 
 .Quan h2 {
-    font-family: cursive;
+    font-family: Oswald;
 }
 
 .Quan p {
@@ -215,6 +216,14 @@ h3::after {
     text-decoration: none;
 }
 
+.Quan video {
+    height: 420px;
+    width: 580px;
+    border-radius: 30px 30px 30px 30px;
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
 .Quan img {
     height: 420px;
     width: 580px;
