--- a/NhaThoGo.css
+++ b/NhaThoGo.css
@@ -122,7 +122,7 @@
     padding: 16px 22px;
     width: 90px;
     transition: width 0.3s ease;
-    margin-right: 22px;
+  
 }
 .input::placeholder {
     color: #6e6e6e;
@@ -131,7 +131,7 @@
     background: rgb(63, 63, 63);
     transition: 1s;
 }
-.btn1 {
+.btn {
     margin-right: 80px;
     color: #6e6e6e;
     width: 40px;
@@ -190,6 +190,7 @@
     position: absolute;
     top:50%;
     left:50%;
+    width: 70%;
     font-size: 12vh;
     font-family: Lobster;
     transform: translateZ(10px);
