--- a/Kitachi.css
+++ b/Kitachi.css
@@ -189,6 +189,7 @@
     z-index: 1;
     margin-left: 40px;
     display:block;
+    color: #fff;
 }
 #banner .box-left h2{
     font-size: 40px;
@@ -198,6 +199,7 @@
 #banner .box-left p{
     font-size: 20px;
     margin-top: -90px;
+    color: #fff;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
