--- a/ToaGiamMuc.css
+++ b/ToaGiamMuc.css
@@ -291,6 +291,7 @@
     float:right;
     width: 45%;
     height: 50vh;
+    margin-top:60px;
     color: #d4d4d4;
     display:block;
     margin-right: 2%;
@@ -341,6 +342,7 @@
     width: 45%;
     height: 50vh;
     color: #d4d4d4;
+    margin-top:60px;
     display:block;
     margin-left: 2%;
 }
