--- a/NhaThoGo.css
+++ b/NhaThoGo.css
@@ -271,9 +271,7 @@
     width: 60%;
     height: 100%;
 }
-#view {
-    padding-bottom: 80px;
-}
+
 .title{
     color: #242323;
     text-align: center;
@@ -293,6 +291,7 @@
     float:right;
     width: 45%;
     height: 50vh;
+    margin-top:60px;
     color: #d4d4d4;
     display:block;
     margin-right: 2%;
@@ -343,6 +342,7 @@
     width: 45%;
     height: 50vh;
     color: #d4d4d4;
+    margin-top:60px;
     display:block;
     margin-left: 2%;
 }
