--- a/Pineforest.css
+++ b/Pineforest.css
@@ -122,7 +122,7 @@
     padding: 16px 22px;
     width: 90px;
     transition: width 0.3s ease;
-    margin-right: 22px;
+  
 }
 .input::placeholder {
     color: #6e6e6e;
@@ -132,19 +132,6 @@
     transition: 1s;
 }
 .btn {
-    margin-right: 80px;
-    color: #6e6e6e;
-    width: 40px;
-    padding: 13px 10px;
-    cursor: pointer;
-    border-radius: 100px;
-    border: none;
-    background: rgba(255, 255, 255, 0.466);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    top: 0;
-    left: 0;
-}
-.btn1 {
     margin-right: 80px;
     color: #6e6e6e;
     width: 40px;
@@ -203,6 +190,7 @@
     position: absolute;
     top:50%;
     left:50%;
+    width: 70%;
     font-size: 12vh;
     font-family: Lobster;
     transform: translateZ(10px);
@@ -283,9 +271,7 @@
     width: 60%;
     height: 100%;
 }
-#view {
-    padding-bottom: 80px;
-}
+
 .title{
     color: #242323;
     text-align: center;
@@ -305,6 +291,7 @@
     float:right;
     width: 45%;
     height: 50vh;
+    margin-top:60px;
     color: #d4d4d4;
     display:block;
     margin-right: 2%;
@@ -355,6 +342,7 @@
     width: 45%;
     height: 50vh;
     color: #d4d4d4;
+    margin-top:60px;
     display:block;
     margin-left: 2%;
 }
