--- a/HDK.css
+++ b/HDK.css
@@ -122,6 +122,7 @@
     padding: 16px 22px;
     width: 90px;
     transition: width 0.3s ease;
+    margin-right:22px;
   
 }
 .input::placeholder {
