--- a/ToaGiamMuc.css
+++ b/ToaGiamMuc.css
@@ -114,7 +114,6 @@ body {
 
 #actions {
     display: flex;
-    margin-right: -100px;
 }
 
 .input {
@@ -133,7 +132,7 @@ body {
     color: #6e6e6e;
 }
 
-.btn:hover {
+.btn1:hover {
     background: rgb(63, 63, 63);
     transition: 1s;
 }
