--- a/NhaThoGo.css
+++ b/NhaThoGo.css
@@ -133,7 +133,7 @@ body {
     color: #6e6e6e;
 }
 
-.btn:hover {
+.btn1:hover {
     background: rgb(63, 63, 63);
     transition: 1s;
 }
@@ -155,6 +155,7 @@ body {
     position: relative;
     display: flex;
 }
+
 
 .input {
     color: #6e6e6e;
